--- a/service.html
+++ b/service.html
@@ -128,121 +128,61 @@
         <div class="container">
             <div class="content">
                 <a href="#"><i class="fa-solid fa-chevron-left"></i></a>
-                <span>Contact us</span>
+                <span>Services</span>
             </div>
         </div>
     </section>
     <!-- FINISH BREADCRUMB -->
-
-    <!-- start contact header -->
-    <div class="header_blog">
-        <div class="container">
-            <div class="main_content_start">
-                <h2>Contact us</h2>
-                <p>Have questions about our services, doctors, or anything else? Let us know and we’ll get back to you.
-                </p>
-            </div>
-        </div>
-
-    </div>
-    <!-- finish contact header -->
-
-    <!-- start contact  -->
-    <section class="contact_sec">
+    <!-- start service header -->
+    <section class="service_header">
         <div class="container">
             <div class="row">
-                <!-- start col -->
-                <div class="col-lg-5 col-md-12 col-12">
-                    <div class="information_contact">
-                        <h2 class="head">
-                            Almaeswak Mekkah Branch ( The main branch )
-                        </h2>
-                        <p>Consultant of Oral Medicine and Cosmetic Dentistry and a Diploma in Cosmetic Dentistry,
-                            University of Leeds, England</p>
-                        <div class="lists">
-                            <span><i class="fas fa-map-marker-alt"></i></span>
-                            <p> Consultant of Oral Medicine and Cosmetic Dentistry and a Diploma in Cosmetic
-                                Dentistry,
-                                University of Leeds, England</p>
-                        </div>
-                        <div class="lists">
-                            <span><i class="fa-solid fa-phone"></i></span>
-                            <a class="parg" href="tel:01093140277"> 0109654245125414 </a>
-
-                        </div>
-                        <div class="lists">
-                            <span><i class="fa-solid fa-envelope"></i></span>
-                            <p><a class="parg" href="mailto:someone@yoursite.com"> mt7899@gmail
-                                </a> </p>
-                        </div>
-
-                    </div>
-                    <div class="take_look">
-                        <h4>Take a look at the other Almeswak branches</h4>
-                        <a href="branch.html">
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
+                <div class="col-lg-6 col-12">
+                    <img src="media/image/serv.png" alt="service">
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="info">
+                        <h2>Professional Medical Service Of Dental</h2>
+                        <p>Medicate is a long established fact that a reader will be distracted by the readable content
+                            of a page when looking at its layout. Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since.
+                        </p>
+                        <ul>
+                            <li>Comprehensive patient services</li>
+                            <li>Comprehensive patient services</li>
+                            <li>Comprehensive patient services</li>
+                            <li>Comprehensive patient services</li>
+                        </ul>
                     </div>
                 </div>
-                <!-- finish col -->
-                <!-- start col -->
-
-                <div class="col-lg-7 col-md-12 col-12">
-                    <form action="#" class="form_contact">
-                        <h3>Or you can contact with us about any question & problem</h3>
-                        <!-- start input  -->
-                        <div class="row ">
-                            <div class="col-12">
-                                <div class="has-validation input-group">
-                                    <input id="validationCustomUsername" aria-describedby="inputGroupPrepend" required
-                                        type="text" class="form-control" placeholder="Enter your name">
-                                    <div class="invalid-feedback">
-                                        Please choose a username.
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                        <!-- finish input  -->
-                        <!-- start input  -->
-                        <div class="row">
-                            <div class="col-6">
-                                <div class="input-group">
-                                    <input type="email" id="email" class="form-control" placeholder="your email">
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="input-group">
-                                    <input type="tel" id="phone" class="form-control" placeholder="your phone number">
-                                </div>
-                            </div>
-
-                        </div>
-                        <!-- finish input  -->
-                        <!-- start input  -->
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="input-group">
-                                    <textarea name="subject" class="form-control"
-                                        placeholder="Tell us about yourself"></textarea>
-                                </div>
-
-                            </div>
-                        </div>
-                        <!-- finish input  -->
-                        <div class="button">
-                            <button class="btn btn_submit" type="submit">Contact us</button>
-                        </div>
-
-                    </form>
-                </div>
-                <!-- finish col -->
 
             </div>
         </div>
     </section>
+    <!-- finish service header -->
+     <!-- start great place -->
+     <section class="great_section">
+        <div class="container">
+            <div class="head">
+                <div class="main_content_start">
+                    <h2>A Great Place For Dental Health For You And Your Family</h2>
+                    <p>Medicate is a long established fact that a reader will be distracted by the readable content of a
+                        page when looking at its layout. Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since.</p>
+                </div>
+                <div class="button">
+                    <a href="#" class="btn first"> Booking Now</a>
+                </div>
+            </div>
 
-    <!-- finish contact  -->
+        </div>
+    </section>
+    <!-- finish great place -->
+
+
+
+
+
 
 
     <!-- start footer section -->
@@ -380,28 +320,7 @@
     <!-- end footer section -->
 
 
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-            'use strict'
 
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            var forms = document.querySelectorAll('.needs-validation')
-
-            // Loop over them and prevent submission
-            Array.prototype.slice.call(forms)
-                .forEach(function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (!form.checkValidity()) {
-                            event.preventDefault()
-                            event.stopPropagation()
-                        }
-
-                        form.classList.add('was-validated')
-                    }, false)
-                })
-        })()
-    </script>
 
 </body>
 
